// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingAddressesDropdown/> should display \`No results\` when shippingAddresses = [] & snapshot should render \`Select from address book...\` 1`] = `
<div>
  <label
    class="_label_e6rgs_141 label"
  >
    Shipping address
    <abbr
      aria-label="required"
      class="_abbr_e6rgs_136"
      title="required"
    >
      *
    </abbr>
  </label>
  <div
    class="flex"
  >
    <div
      class="dropdown"
      id="shipping-address-dropdown"
    >
      <div
        aria-invalid="false"
        class="wrapper"
        role="combobox"
        tabindex="0"
      >
        <div
          class="inputWrapper isFocused"
        >
          <div
            class="input isGreyed"
          >
            Select from address book...
          </div>
          <i
            class="affix suffix toggle material-icons"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="wrapper ml-2 wrapper fill secondary medium"
      type="button"
    >
      <span
        class="content"
      >
        <i
          class="material-icons icon"
        >
          add
        </i>
      </span>
    </button>
    <div />
  </div>
</div>
`;

exports[`<ShippingAddressesDropdown/> snapshot renders the selected shipping address instead of \`Select from address book...\` 1`] = `
<div>
  <label
    class="_label_e6rgs_141 label"
  >
    Shipping address
    <abbr
      aria-label="required"
      class="_abbr_e6rgs_136"
      title="required"
    >
      *
    </abbr>
  </label>
  <div
    class="flex"
  >
    <div
      class="dropdown"
      id="shipping-address-dropdown"
    >
      <div
        aria-invalid="false"
        class="wrapper"
        role="combobox"
        tabindex="0"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="input"
          >
            A Test 2, Random Street 19, 507051 Paris, Paris, FR, France
          </div>
          <i
            class="affix suffix toggle material-icons"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="wrapper ml-2 wrapper fill secondary medium"
      type="button"
    >
      <span
        class="content"
      >
        <i
          class="material-icons icon"
        >
          add
        </i>
      </span>
    </button>
    <div />
  </div>
</div>
`;
